--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -87,7 +87,7 @@ master-slider: yes
           
           <!-- Specs -->
           <section id="section-bar-1">
-            <div class="col-sm-8">
+            <div class="col-sm-9">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SG-P8P8</a></li>
@@ -413,7 +413,7 @@ master-slider: yes
                 </div>
               </div>
             </div>
-            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+            <aside class="col-sm-3 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
@@ -688,24 +688,24 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-bt-07.jpg" alt="Beetle Pipe Cleaning Tools">
-        <h5>Beetle</h5></a>
+        <a href="/sh-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sh.jpg" alt="SH Rotary Swivels">
+        <h5>SH Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/bjv"><img class="img-responsive" src="/assets/img/product/thumb-bjv-03.jpg" alt="BJV pipe cleaning nozzles">
-        <h5>BJV</h5></a>
+        <a href="/sl-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sl.jpg" alt="SL Rotary Swivels">
+        <h5>SL Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/raptor"><img class="img-responsive" src="/assets/img/product/thumb-rpt-02.jpg" alt="Raptor Pipe Cleaning Tools">
-        <h5>Raptor</h5></a>
+        <a href="/sm-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sm.jpg" alt="SL Rotary Swivels">
+        <h5>SM Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/product/thumb-backout.jpg" alt="High pressure pipe cleaning backout preventers">
-        <h5>Backout Prevention</h5></a>
+        <a href="/uh-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-uh.jpg" alt="UH Rotary Swivels">
+        <h5>UH Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
-        <h5>AutoBox ABX-500</h5></a>
+        <a href="/scs"><img class="img-responsive" src="/assets/img/product/thumb-scs-01.jpg" alt="SCS Tank Cleaner">
+        <h5>SCS Tank Cleaner</h5></a>
       </div>
     </div>
   </div>
@@ -717,8 +717,8 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-      <h2>Speed Controlled Rotary Cleaning for Small Lines</h2>
-      <p>The Gopher can be paired with StoneAge automated tube cleaning systems to facilitate hands-free lancing of large diameter tubes such as those found in industrial evaporators and condensers.</p>
+      <h2>The industry’s widest selection</h2>
+      <p>Reliable and easy to maintain, SG Swivels are widely used in StoneAge surface preparation tools.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
@@ -731,42 +731,5 @@ master-slider: yes
   </div>
 </section>
 <!-- Product extras -->
-
-<!-- Product Testimonials -->
-<div class="row product-testimonials">
-  <div id="carousel-product" class="carousel slide" data-ride="carousel">
-    <!-- Indicators
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-product" data-slide-to="1"></li>
-    </ol> -->
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-<!--
-        <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
-          <p class="signed">-Mike House</p>
-        </div>
--->
-        <img src="/assets/img/sliders/gopher_withsuit.jpg" alt="Gopher pipe and tube cleaning tools">
-      </div>
-
-    </div><!-- End wrapper -->
-
-    <!-- Controls
-    <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a> -->
-  </div>
-</div>
-<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
