--- a/rotary-waterblast-tools/sm-swivel.html
+++ b/rotary-waterblast-tools/sm-swivel.html
@@ -46,8 +46,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">SM swivels convey high pressure fluid from a stationary line to a rotating or twisting assembly. They are intended for use where an external motor/gearbox supplies power for rotation.</p>
-      <p>SM swivels may also be used on hose reels or where a hose connects to an assembly to aid in hose handling.</p>
+      <p class="product-description">SM swivels convey high pressure fluid from a stationary line to a rotating or twisting assembly. They are intended for use where an external motor/gearbox supplies power for rotation. SM swivels may also be used on hose reels or where a hose connects to an assembly to aid in hose handling.</p>
       <p>Constructed similarly to the SG swivel, the heavy-duty SM series is built to handle up to 3500 hp.</p>
       
       <h2>Features</h2>
@@ -422,24 +421,24 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-bt-07.jpg" alt="Beetle Pipe Cleaning Tools">
-        <h5>Beetle</h5></a>
+        <a href="/sg-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Rotary Swivels">
+        <h5>SG Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/bjv"><img class="img-responsive" src="/assets/img/product/thumb-bjv-03.jpg" alt="BJV pipe cleaning nozzles">
-        <h5>BJV</h5></a>
+        <a href="/sh-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sh.jpg" alt="SH Rotary Swivels">
+        <h5>SH Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/raptor"><img class="img-responsive" src="/assets/img/product/thumb-rpt-02.jpg" alt="Raptor Pipe Cleaning Tools">
-        <h5>Raptor</h5></a>
+        <a href="/sl-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sl.jpg" alt="SL Rotary Swivels">
+        <h5>SL Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/product/thumb-backout.jpg" alt="High pressure pipe cleaning backout preventers">
-        <h5>Backout Prevention</h5></a>
+        <a href="/uh-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-uh.jpg" alt="UH Rotary Swivels">
+        <h5>UH Swivel</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
-        <h5>AutoBox ABX-500</h5></a>
+        <a href="/scs"><img class="img-responsive" src="/assets/img/product/thumb-scs-01.jpg" alt="SCS Tank Cleaner">
+        <h5>SCS Tank Cleaner</h5></a>
       </div>
     </div>
   </div>
@@ -465,42 +464,5 @@ master-slider: yes
   </div>
 </section>
 <!-- Product extras -->
-
-<!-- Product Testimonials -->
-<div class="row product-testimonials">
-  <div id="carousel-product" class="carousel slide" data-ride="carousel">
-    <!-- Indicators
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-product" data-slide-to="1"></li>
-    </ol> -->
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-<!--
-        <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
-          <p class="signed">-Mike House</p>
-        </div>
--->
-        <img src="/assets/img/sliders/gopher_withsuit.jpg" alt="Gopher pipe and tube cleaning tools">
-      </div>
-
-    </div><!-- End wrapper -->
-
-    <!-- Controls
-    <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a> -->
-  </div>
-</div>
-<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
